--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header-left-site">
-                <a href="index.html" title="My page" lang="en" class="webstudio"><span class="web">Web</span>Studio</a>
+            <div class="header__menu">
+                <a href="index.html" title="My page" lang="en" class="logo">Web<span class="logo__header">Studio</span></a>
                 <nav>
-                    <ul class="headertext">
-                        <li><a href="index.html" title="Studio" class="black active">Студія</a></li>
-                        <li><a href="portfolio.html" title="Portfolio" class="black">Портфоліо</a></li>
-                        <li><a href="#" title="Contacts" class="black">Контакти</a></li>
+                    <ul class="header__list">
+                        <li class="header__item"><a href="index.html" title="Studio" class="black active">Студія</a></li>
+                        <li class="header__item"><a href="portfolio.html" title="Portfolio" class="black">Портфоліо</a></li>
+                        <li class="header__item"><a href="#" title="Contacts" class="black">Контакти</a></li>
                     </ul>
                 </nav>
             </div>
-            <ul class="header-right-site">
+            <ul class="header__contact">
                 <li><a href="mailto:info@devstudio.com" lang="en" title="mail" class="header-contact"><svg class="icon-header" width="16" height="12">
                         <use href="./images/icomoon/symbol-defs.svg#icon-mail"></use>
                     </svg>info@devstudio.com</a></li>
@@ -72,18 +72,18 @@
                         <p class="benefits__description">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="benefits__item">
-                        <div class="benefits__image"><svg class="astronaut-icon" width="70" height="70">
+                        <div class="benefits__box"><svg class="astronaut-icon" width="70" height="70">
                                 <use href="./images/icomoon/symbol-defs.svg#icon-astronaut-1"></use>
                             </svg></div>
-                        <h3 class="benefits__meta">Сучасні технології</h3>
+                        <h3 class="benefits__title">Сучасні технології</h3>
                         <p class="benefits__description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="work section">
+        <section class="work">
             <div class="container">
-                <h2 class="work__title">Чим ми займаємося</h2>
+                <h2 class="title">Чим ми займаємося</h2>
                 <ul class="work__list">
                     <li class="work__item"><img class="work__image" src="./images/1.jpg" alt="notebook" width="370"><div class="work__box">Десктопні додатки</div></li>
                     <li class="work__item"><img class="work__image" src="./images/2.jpg" alt="phone" width="370"><div class="work__box">Мобільні додатки</div></li>
@@ -93,75 +93,75 @@
         </section>
         <section class="team">
             <div class="container">
-                <h2 class="team-name">Наша команда</h2>
-                <ul class="team-gallery">
-                    <li class="team-gallery__item">
+                <h2 class="title">Наша команда</h2>
+                <ul class="team-list">
+                    <li class="employee">
                         <img src="./images/4.jpg" alt="Igor" width="270">
-                        <div class="team-box">
-                            <h3 class="team-box__name">Ігор Дем'яненко</h3>
-                            <p class="team-box__direction" lang="en">Product Designer</p>
-                            <ul class="team-box__social">
-                                <li class="team-box__item">
-                                    <a class="team-box__link" href="#">
-                                        <svg class="team-box__icon">
+                        <div class="employee-box">
+                            <h3 class="employee-box__name">Ігор Дем'яненко</h3>
+                            <p class="employee-box__direction" lang="en">Product Designer</p>
+                            <ul class="employee-box__social">
+                                <li class="employee-box__item">
+                                    <a class="employee-box__link" href="#">
+                                        <svg class="employee-box__icon">
                                             <use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="team-gallery__item">
+                    <li class="employee">
                         <img src="./images/5.jpg" alt="Olga" width="270">
-                        <div class="team-box">
-                            <h3 class="team-box__name">Ольга Рєпіна</h3>
-                            <p class="team-box__direction" lang="en">Frontend Developer</p>
-                            <ul class="team-box__social">
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                        <div class="employee-box">
+                            <h3 class="employee-box__name">Ольга Рєпіна</h3>
+                            <p class="employee-box__direction" lang="en">Frontend Developer</p>
+                            <ul class="employee-box__social">
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>                       
                     </li>
-                    <li class="team-gallery__item">
+                    <li class="employee">
                         <img src="./images/6.jpg" alt="Mikola" width="270">
-                        <div class="team-box">
-                            <h3 class="team-box__name">Микола Тарасов</h3>
-                            <p class="team-box__direction" lang="en">Marketing</p>
-                            <ul class="team-box__social">
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                        <div class="employee-box">
+                            <h3 class="employee-box__name">Микола Тарасов</h3>
+                            <p class="employee-box__direction" lang="en">Marketing</p>
+                            <ul class="employee-box__social">
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="team-gallery__item">
+                    <li class="employee">
                         <img src="./images/7.jpg" alt="Michailo" width="270">
-                        <div class="team-box">
-                            <h3 class="team-box__name">Михайло Єрмаков</h3>
-                            <p class="team-box__direction" lang="en">UI Designer</p>
-                            <ul class="team-box__social">
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
+                        <div class="employee-box">
+                            <h3 class="employee-box__name">Михайло Єрмаков</h3>
+                            <p class="employee-box__direction" lang="en">UI Designer</p>
+                            <ul class="employee-box__social">
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="team-box__item"><a class="team-box__link" href="#"><svg class="team-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
+                                <li class="employee-box__item"><a class="employee-box__link" href="#"><svg class="employee-box__icon"><use href="./images/icomoon/symbol-defs.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
                         </div>
@@ -170,10 +170,10 @@
                 </ul>
             </div>
         </section>
-        <section class="clients">
+        <section class="section">
             <div class="container">
-                <h2 class="clients__text">Постійні клієнти</h2>
-                <ul class="clients__nav">
+                <h2 class="title">Постійні клієнти</h2>
+                <ul class="clients">
                     <li class="clients__item"><a href="#" class="clients__link"><svg width="106" height="60">
                         <use href="./images/icomoon/symbol-defs.svg#icon-Logo"></use></svg></a></li>
                     <li class="clients__item"><a href="#" class="clients__link"><svg width="106" height="60">
@@ -193,16 +193,16 @@
     <footer class="footer">
         <div class="container">
             <div>
-            <a href="./index.html"class="webstudio" lang="en"><span class="web"><b>Web</b></span>Studio</a>
-            <address class="footer-address">
-                <ul class="footer-address__nav">
-                    <li class="footer-adress__item">
+            <a href="./index.html"class="logo" lang="en"><b>Web</b><span class="logo__footer">Studio</span></a>
+            <address>
+                <ul class="footer-contacts">
+                    <li class="footer-contacts__item">
                         <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                        title="GoogleMaps" class="footer-adress__google">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li class="footer-adress__item">
-                    <a href="mailto:info@devstudio.com" title="mail" class="footer-adress__info">info@devstudio.com</a></li>
-                <li class="footer-adress__item">
-                    <a href="tel:+380961111111" title="phone" class="footer-adress__info">+38 096 111 11 11</a></li>
+                        title="GoogleMaps" class="footer-contacts__google">м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li class="footer-contacts__item">
+                        <a href="mailto:info@devstudio.com" title="mail" class="footer-contacts__info">info@devstudio.com</a></li>
+                    <li class="footer-contacts__item">
+                        <a href="tel:+380961111111" title="phone" class="footer-contacts__info">+38 096 111 11 11</a></li>
                 </ul>
             </address>
             </div>
