--- a/portfolio.html
+++ b/portfolio.html
@@ -17,17 +17,17 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header-left-site">
-                <a href="index.html" title="My page" lang="en" class="webstudio"><span class="web">Web</span>Studio</a>
+            <div class="header__menu">
+                <a href="index.html" title="My page" lang="en" class="logo">Web<span class="logo__header">Studio</span></a>
                 <nav>
-                    <ul class="headertext">
-                        <li><a href="index.html" title="Studio" class="black">Студія</a></li>
-                        <li><a href="portfolio.html" title="Portfolio" class="black active">Портфоліо</a></li>
-                        <li><a href="#" title="Contacts" class="black">Контакти</a></li>
+                    <ul class="header__list">
+                        <li class="header__item"><a href="index.html" title="Studio" class="black">Студія</a></li>
+                        <li class="header__item"><a href="portfolio.html" title="Portfolio" class="black active">Портфоліо</a></li>
+                        <li class="header__item"><a href="#" title="Contacts" class="black">Контакти</a></li>
                     </ul>
                 </nav>
             </div>
-            <ul class="header-right-site">
+            <ul class="header__contact">
             <li><a href="mailto:info@devstudio.com" lang="en" title="mail" class="header-contact"><svg class="icon-header" width="16" height="12">
                         <use href="./images/icomoon/symbol-defs.svg#icon-mail"></use>
                     </svg>info@devstudio.com</a></li>
@@ -37,26 +37,26 @@
         </div>
     </header>
     <main>
-        <section class="direction section">
+        <section class="direction">
             <h1 hidden>button</h1>
             <div class="container">
-            <ul class="buttons">
-                <li><button type="submit" class="buttonp button1">Усі</button></li>
-                <li><button type="submit" class="buttonp button2">Веб-сайти</button></li>
-                <li><button type="submit" class="buttonp button3">Додатки</button></li>
-                <li><button type="submit" class="buttonp button4">Дизайн</button></li>
-                <li><button type="submit" class="buttonp button5">Маркетинг</button></li>
+            <ul class="direction-button">
+                <li><button type="submit" class="direction-button__button button1">Усі</button></li>
+                <li><button type="submit" class="direction-button__button button2">Веб-сайти</button></li>
+                <li><button type="submit" class="direction-button__button button3">Додатки</button></li>
+                <li><button type="submit" class="direction-button__button button4">Дизайн</button></li>
+                <li><button type="submit" class="direction-button__button button5">Маркетинг</button></li>
             </ul>
             <ul class="project-list">
                 <li class="project">
                     <a href="#" class="project-link" target="_blank">
-                    <div class="hiding">                        
+                        <div class="hiding">                        
                         <img src="./images/2-1.jpg" alt="notebook" width="370" height="294">
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                    </div>
+                        </div>
                     <div class="textmaker"> 
-                    <h2>Технокряк</h2> 
-                    <p>Веб-сайт</p>
+                        <h2>Технокряк</h2> 
+                        <p>Веб-сайт</p>
                     </div>
                     </a>
                 </li>
@@ -163,18 +163,18 @@
     <footer class="footer">
         <div class="container">
             <div>
-                <a href="./index.html" class="webstudio" lang="en"><span class="web"><b>Web</b></span>Studio</a>
-                <address class="footer-address">
-                    <ul class="footer-address__nav">
-                        <li class="footer-adress__item">
+                <a href="./index.html" class="logo" lang="en"><b>Web</b><span class="logo__footer">Studio</span></a>
+                <address>
+                    <ul class="footer-contacts">
+                        <li class="footer-contacts__item">
                             <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                                title="GoogleMaps" class="footer-adress__google">м. Київ, пр-т Лесі Українки, 26</a>
+                                title="GoogleMaps" class="footer-contacts__google">м. Київ, пр-т Лесі Українки, 26</a>
                         </li>
-                        <li class="footer-adress__item">
-                            <a href="mailto:info@devstudio.com" title="mail" class="footer-adress__info">info@devstudio.com</a>
+                        <li class="footer-contacts__item">
+                            <a href="mailto:info@devstudio.com" title="mail" class="footer-contacts__info">info@devstudio.com</a>
                         </li>
-                        <li class="footer-adress__item">
-                            <a href="tel:+380961111111" title="phone" class="footer-adress__info">+38 096 111 11 11</a>
+                        <li class="footer-contacts__item">
+                            <a href="tel:+380961111111" title="phone" class="footer-contacts__info">+38 096 111 11 11</a>
                         </li>
                     </ul>
                 </address>
